<resources>
    <string name="app_name">EatStation</string>
    <string name="searchview_hint">Search</string>
    <string name="layout_recommened_text">Recommend</string>
    <string name="menu_koi_the_thailand">Koi The\' Thailand</string>
    <string name="menu_bella_cas">Bella Cas</string>
    <string name="menu_yentafour">เย็นตาโฟทรงเครื่อง</string>
    <string name="menu_cafe_de_fin">Cafe\' De Fin</string>
    <string name="menu_moomoo_eateru">Moo Moo Eatery</string>
    <string name="menu_pork_noodle">นายเม้ง บะหมี่ปู เกี้ยวกุ้งยักษ์</string>
    <string name="menu_papaya_salad">ส้มตำเด้อ</string>
    <string name="menu_dean_deluca">Dean &amp; Deluca</string>
    <string name="menu_amor">Amor</string>
    <string name="menu_thaithyme">Thaithyme</string>
    <string name="detail_location_koi_the_thailand">BTS สยาม</string>
    <string name="detail_location_bella_cas">MRT บางซื่อ</string>
    <string name="detail_location_yentafour">MRT ตลาดบางใหญ่</string>
    <string name="detail_location_cafe_de_fin">MRT_คลองบางไผ่</string>
    <string name="detail_location_moomoo_eateru">BTS ศาลาแดง</string>
    <string name="detail_location_pork_noodle">BTS ศาลาแดง</string>
    <string name="detail_location_papaya_salad">BTS ศาลาแดง</string>
    <string name="detail_location_dean_deluca">BTS ศาลาแดง</string>
    <string name="detail_location_amor">BTS ศาลาแดง</string>
    <string name="detail_location_thaithyme">BTS ศาลาแดง</string>
    <string name="toolbar_name_none"> </string>
    <string name="toolbar_name_profile">Profile</string>
    <string name="toolbar_name_restuarant">Restuarant</string>
    <string name="toolbar_name_station">Station</string>
    <string name="toolbar_name_notification">Notification</string>
    <string name="app_eatstation_name">EAT STATION</string>
    <string name="btn_signin_text">Sign in</string>
    <string name="sign_in_with_facebook">sign in with facebook</string>
    <string name="lost_your_password">Lost your password?</string>
    <string name="sign_up">Sign up</string>
    <string name="text_verify_lognin">ยืนยันการเข้าสู่ระบบ</string>
    <string name="facebook_discription1">คุณได้เข้าสุ่ระบบ Eatstation ด้วย Facebook ก่อนหน้านี้</string>
    <string name="facebook_discription2">คุณต้องการดำเเนินการต่อหรือไม่</string>
    <string name="facebook_next_text">ดำเนินการต่อ</string>
    <string name="text_facebook_cancel">ยกเลิก</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="google_user1_mail">sasithorn.thpy@gmail.com</string>
    <string name="google_user2_mail">sasithorn.t59@rsu.ac.th</string>
    <string name="google_user3_mail">kayowhy95s@gmail.com</string>
    <string name="google_user1_name">KoiKoy S.</string>
    <string name="google_user2_name">Sasithorn Thapayom</string>
    <string name="google_user3_name">Kkayo Why95s</string>
    <string name="google_user_none">Use another account</string>
    <string name="none"> </string>
    <string name="forgot_email_text">koy1s@gmail.com</string>
    <string name="forget_password_discription">Averification code has been sent to the above your email. Please enter the code in the window above.</string>
    <string name="confirm_text">Confirm</string>
    <string name="resend_verification_code_text">Resend verification code</string>
    <string name="sign_up_text">Sign up</string>
    <string name="title_activity_maps">Map</string>
    <string name="rate_text">Rate</string>
    <string name="station_bts_silom">สถานีรถไฟฟ้า BTS สายสีลม</string>
    <string name="station_bts_sukrumvit">สถานีรถไฟฟ้า BTS สายสุขุมวิท</string>
    <string name="station_mrt_blue">สถานีรถไฟฟ้า MRT สายสีน้ำเงิน</string>
    <string name="station_mrt_violet">สถานีรถไฟฟ้า MRT สายสีม่วง</string>

</resources>
