<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.FacebookLoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#425892"
        >
        <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:src="@drawable/ic_facebook"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_verify_lognin"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal|center_vertical"
            />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            >
            <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
                android:id="@+id/img_logo_in_facebook"
                android:layout_width="wrap_content"
                android:layout_height="85dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_eatstation_main"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/tv_description1"
                android:layout_below="@id/img_logo_in_facebook"
                android:textSize="20sp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook_discription1"/>
            <TextView
                android:id="@+id/tv_description2"
                android:layout_below="@id/tv_description1"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook_discription2"

                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="4"
            >
            <Button
                android:id="@+id/btn_next"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/facebook_next_text"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:background="@drawable/selector_btn_facebooknext"
                />
            <Button
                android:id="@+id/btn_cancel"
                android:layout_marginTop="8dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/text_facebook_cancel"
                android:textSize="18sp"
                android:textColor="#898989"
                android:layout_gravity="center"
                android:background="@drawable/selector_btn_facebookcancel"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>